--- a/TODO.txt
+++ b/TODO.txt
@@ -82,8 +82,9 @@ x history links in job screen (from job and triggers)
 x logs and history in db for jdbc stores (oracle)
 x logLevel parameter for all jobs (default is WARN)
 x org.glass -> com.github.dbourdette.glass
-- be able to keep logs and history in memory but having jobs in db
+x be able to keep logs and history in memory but having jobs in db
 - logs and history in db for jdbc stores (mysql)
+- build and deploy glass-site using snapshot repo
 v 0.1-beta6 - selenium
 - better table formatting (center dates, status...)
 - query form for history page (job, trigger...)
