build and deploy glass-test project using snapshot repo

--- a/TODO.txt
+++ b/TODO.txt
@@ -83,8 +83,8 @@ x logs and history in db for jdbc stores (oracle)
 x logLevel parameter for all jobs (default is WARN)
 x org.glass -> com.github.dbourdette.glass
 x be able to keep logs and history in memory but having jobs in db
+- build and deploy glass-test project using snapshot repo
 - logs and history in db for jdbc stores (mysql)
-- build and deploy glass-site using snapshot repo
 v 0.1-beta6 - selenium
 - better table formatting (center dates, status...)
 - query form for history page (job, trigger...)
