--- a/TODO.txt
+++ b/TODO.txt
@@ -83,11 +83,11 @@ x logs and history in db for jdbc stores (oracle)
 x logLevel parameter for all jobs (default is WARN)
 x org.glass -> com.github.dbourdette.glass
 x be able to keep logs and history in memory but having jobs in db
-- build and deploy glass-test project using snapshot repo
-- logs and history in db for jdbc stores (mysql)
+x build and deploy glass-test project using snapshot repo
 v 0.1-beta6 - selenium
-- version number in footer
 - better table formatting (center dates, status...)
+- version number in footer
+- logs and history in db for jdbc stores (mysql)
 - query form for history page (job, trigger...)
 - query form for logs page (job, trigger...)
 - trigger stays in list if he misfires and produces no run history
