--- a/TODO.txt
+++ b/TODO.txt
@@ -87,9 +87,9 @@ x build and deploy glass-test project using snapshot repo
 v 0.1-beta6 - bugs
 x log message : CLOB
 x reference : template = com/github/dbourdette/glass/velocity/logs.vm [line 45,column 56] : $format.html($log.rootCause) is not a valid reference.
+x stacktrace with wrong colspan in logs (and somewhere else ?)
 - clear logs button in logs
 - clear history button in logs
-- stacktrace with wrong colspan in logs (and somewhere else ?)
 - better table formatting (center dates, status...)
 - version number in footer
 - logs and history in db for jdbc stores (mysql)
