clear logs button in logs

--- a/TODO.txt
+++ b/TODO.txt
@@ -88,7 +88,7 @@ v 0.1-beta6 - bugs
 x log message : CLOB
 x reference : template = com/github/dbourdette/glass/velocity/logs.vm [line 45,column 56] : $format.html($log.rootCause) is not a valid reference.
 x stacktrace with wrong colspan in logs (and somewhere else ?)
-- clear logs button in logs
+x clear logs button in logs
 - clear history button in logs
 - better table formatting (center dates, status...)
 - version number in footer
