--- a/TODO.txt
+++ b/TODO.txt
@@ -89,7 +89,7 @@ x log message : CLOB
 x reference : template = com/github/dbourdette/glass/velocity/logs.vm [line 45,column 56] : $format.html($log.rootCause) is not a valid reference.
 x stacktrace with wrong colspan in logs (and somewhere else ?)
 x clear logs button in logs
-- clear history button in logs
+x clear history button in logs
 - better table formatting (center dates, status...)
 - version number in footer
 - logs and history in db for jdbc stores (mysql)
