--- a/TODO.txt
+++ b/TODO.txt
@@ -91,6 +91,7 @@ x stacktrace with wrong colspan in logs (and somewhere else ?)
 x clear logs button in logs
 x clear history button in logs
 x better table formatting (center dates, status...)
+- configurable number of threads
 - version number in footer
 - logs and history in db for jdbc stores (mysql)
 - query form for history page (job, trigger...)
@@ -103,6 +104,7 @@ v 0.1-beta7 - documentation
 - include a NOTICE for apache licence
 v 0.1-beta8 - selenium
 - selenium tests
+- http://www.asciiflow.com/
 
 v 0.2 - smooth
 - remove apache commons lang
